--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -1,5 +1,76 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.left-box {
+  text-align: center;
+  display: block;
+  background-color: #e6f2ff;
+  width: 90px;
+  padding: 10px;
+  margin: 0 auto;
+}
 
+.right-box {
+  text-align: center;
+  display: block;
+  background-color: #e6f2ff;
+  width: 90px;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.q6--around.is-table {
+  display: table;
+}
+
+.q6--around {
+  width: 300px;
+  height: 200px;
+  margin: 0 auto;
+  background-color: #ecf1f2
+}
+
+.q6--around.is-table .q6__box {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #ecf1f2;
+}
+
+.q6--around.is-table .q6__box__text {
+  display: inline-block;
+  padding: 10px;
+  background-color: #fff;
+}
+
+.q6--around.is-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.q6--around.is-flex .q6__box__text {
+  padding: 10px;
+  background-color: #fff;
+}
+
+.q6--position .q6__box {
+  position: relative;
+}
+
+.q6__box.is-stable .q6__box__inner  {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+
+.q6__box.is-flexible .q6__box__inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%)
+}
 /* 回答はここに書いてね */
