--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.q1_content {
+  width:  940px;
+  margin: 0 auto;
+  padding: 20px;
+  background: #eff3f4;
+  box-sizing: border-box;
+}
+
+.q1_content_box {
+  float: left;
+  margin-left: 20px;
+  padding: 20px;
+  width: 230px;
+  background: #3274ae;
+}
+
+
+.q1_content_text  {
+  padding:  20px;
+  font-size:  16px;
+  line-height:  16px;
+  border: 10px  solid #022336;
+  background: #eaf4ff;
+}
+
+.clearfix::after  {
+  display:  block;
+  content:  "";
+  clear:  both;
+}
 
 /* 回答はここに書いてね */
