--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.q3__contents {
+  width: 100%;
+  border: 1px solid #dedede;
+  table-layout: fixed;
+}
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.q3__contents th {
+  background: #24a;
+  color: #fff;
+  font-size: 18px;
+  line-height: 26px;
+}
+
+.q3__contents th, .q3__contents td{
+  padding: 10px;
+  border: 1px solid #dedede;
+  vertical-align: middle;
+}
+
+.q3__contents > tbody > tr:nth-child(even) {
+  background-color: #ecf1f2;
+}
+
+.q3__contents > tbody > tr:last-child {
+  border-top: 2px dashed #000;
+}
 /* 回答はここに書いてね */
