--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,5 +1,50 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.q4 {
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #ecf1f2;
+}
 
-/* 回答はここに書いてね */
+.q4__contents:first-child {
+  margin-top: 0;
+}
+
+.q4__contents {
+  display: table;
+  width: 100%;
+  background-color: #ecf1f2;
+}
+
+.q4__contents__cell {
+  display: table-cell;
+  padding: 20px;
+  text-align: center;
+}
+
+.q4__contents__cell.is-pink {
+  width: 100px;
+  background-color: #fdc8b8;
+}
+
+.q4__contents__cell.is-purple {
+  background-color: #e0abd9;
+}
+
+.q4__contents__cell.is-blue {
+  width: 100px;
+  background-color: #86d8ed;
+}
+
+.q4__contents__cell.is-yellow {
+  background-color: #e5d32e;
+}
+
+.q4__contents__cell.is-red {
+  background-color: #ec8f9a;
+}
+
+.q4__contents__cell.is-green {
+  width: 500px;
+  background-color: #8fdcad;
+}
