--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -1,5 +1,126 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.q7__inner  {
+  display: block; 
+  margin: 0 auto;
+  padding:  20px;
+  width:  300px;
+  background-color: #ecf1f2;
+}
 
-/* 回答はここに書いてね */
+.q7__inner  {
+  margin: 0 auto;
+  padding: 20px;
+  width: 500px;
+  background-color: #ecf1f2
+}
+
+.q7--float .q7__box:first-child {
+  margin-left: 0;
+}
+
+.q7--float .q7__box {
+  float: left;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.q7--float  .q7__box {
+  float: left;
+  margin-left: 50px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.clearfix::after  {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q7--table .q7__box:first-child {
+  padding-left: 0;
+}
+
+.q7--table .q7__box__text {
+  font-size: 16px;
+}
+
+.q7--table .q7__box {
+  display: table-cell;
+  padding-left: 50px;
+  vertical-align: middle;
+}
+
+.q7--inlineblock .q7__inner {
+  font-size: 0;
+}
+
+.q7--inlineblock .q7__box:first-child {
+  margin-left: 0;
+}
+
+.q7--inlineblock .q7__box {
+  display: inline-block;
+  margin-left: 50px;
+  font-size: 16px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.q7--flex .q7__inner {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end
+}
+
+.q7--table .q7__inner {
+  display: table;
+}
+
+.q7 .q7__innner {
+  margin: 0 auto;
+  padding: 20px;
+  width: 500px;
+  background-color: #ecf1f2
+}
+
+.q7--flex .q7__box {
+  font-size: 16px;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.q7 .q7__box  {
+  width: 225px;
+}
+
+.q7 .q7__inner.is-full {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.q7--margin .q7__inner {
+  font-size: 0;
+}
+
+.q7--margin .q7__box.is-stable {
+  display: inline-block;
+  width: 300px;
+}
+
+.q7--margin .q7__box {
+  vertical-align: top;
+}
+
+.q7--margin .q7__box__text {
+  font-size: 16px;
+}
+
+.q7--margin .q7__box.is-flexible {
+  display: inline-block;
+  width: 100%;
+  margin-left: -300px;
+  padding-left: 350px;
+  box-sizing: border-box;
+}
