--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,278 @@
-@charset "UTF-8";
 
-/* 回答はここに書いてね */
+.q8 {
+  margin-top: 20px!important;
+}
 
-/* 回答はここに書いてね */
+.q8--btn {
+  font-size: 0;
+  text-align: center;
+}
+
+.q8__title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.q8--btn .q8__btn:first-of-type {
+  margin-left: 0;
+}
+
+.q8__btn--common {
+  background-color: #00BCD4;
+  color: #FFF;
+}
+
+.q8__btn--small {
+  padding: 0 15px;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+.q8__btn {
+  display: inline-block;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.q8__btn--error {
+  background-color: #ff4081;
+  color: #fff;
+}
+
+.q8__btn--disabled {
+  background-color: #e5e5e5;
+  color: #fff;
+  cursor: default;
+}
+
+.q8__btn.is-shadow {
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .12), 0 1px 4px rgba(0, 0, 0, .12);
+}
+
+.q8__btn--default {
+  background-color: #fff;
+  color: #222;
+}
+
+.q8__btn--middle {
+  padding: 0 20px;
+  border-radius: 5px;
+  font-size: 20px;
+  line-height: 32px;
+}
+
+.q8__btn--large {
+  padding: 0 25px;
+  border-radius: 7px;
+  font-size: 24px;
+  line-height: 38px;
+}
+
+
+.q8__form {
+  width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #ecf1f2
+}
+
+.q8__form__title {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.q8__form__title__text {
+  position: relative;
+  display: inline-block;
+  padding-right: 10px;
+  background-color: #ecf1f2;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.q8__main {
+  float: left;
+  width: 300px;
+}
+
+.q8__main__items {
+  margin-bottom: 20px;
+}
+
+.q8__main__items__title {
+  float: left;
+  width: 100px;
+  line-height: 25px;
+  text-align: right;
+}
+
+.is-required {
+  color: #f00;
+}
+
+.q8__main__items__content {
+  float: right;
+  width: 180px;
+}
+
+.q8__input {
+  width: 100%;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: #fff;
+  font-size: 12px;
+  line-height: 12px;
+  box-sizing: border-box;
+}
+
+.q8__input__init {
+  background: none;
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
+}
+
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q8__main__items > li {
+  margin-top: 20px;
+}
+
+.q8__radio {
+  cursor: pointer;
+}
+
+.q8__radio__btn {
+  display: none;
+}
+
+.q8__radio__text {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+}
+
+.q8__radio__text:before {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 14px;
+  height: 14px;
+  margin-top: -8px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  content: "";
+}
+
+.q8__radio__btn:checked + .q8__radio__text:after {
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  width: 8px;
+  height: 8px;
+  margin-top: -4px;
+  background-color: #00bcd4;
+  border-radius: 50%;
+  content: "";
+}
+
+.q8__select__body {
+  width: 100%;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: #fff;
+  font-size: 12px;
+  line-height: 12px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.q8__select:after {
+  display: block;
+  position: absolute;
+  top: 40px;
+  right: 10px;
+  width: 8px;
+  height: 8px;
+  border-right: 2px solid #e5e5e5;
+  border-bottom: 2px solid #e5e5e5;
+  transform: rotate(45deg);
+  content: "";
+  pointer-events: none;  
+}
+
+.q8__checkbox {
+  text-align: right;
+}
+
+.q8__checkbox__btn {
+  display: none;
+}
+
+.q8__checkbox__text {
+  position: relative;
+  display: inline-block;
+  padding-left: 24px;
+}
+
+.q8__checkbox__text:before {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  margin-top: -9px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  content: "";
+}
+
+.q8__checkbox__btn:checked +  .q8__checkbox__text:after {
+  position: absolute;
+  top: 50%;
+  left: 6px;
+  width: 8px;
+  height: 16px;
+  margin-top: -14px;
+  border-right: 3px solid #00bcd4;
+  border-bottom: 3px solid #00bcd4;
+  transform: rotate(45deg);
+  content: ""; 
+}
+
+.q8__main__bottom {
+  text-align: right;
+}
+
+.q8__main__bottom__btn {
+  padding: 0 10px;
+  border-radius: 5px;
+  background-color: #00bcd4;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.q8__side {
+  float: right;
+  width: 380px;
+}
+
+.q8__side__text {
+  width: 100%;
+  height: 203px;
+  padding: 10px;
+  border-radius: 3px;
+  background-color: #fff;
+  font-size: 12px;
+  box-sizing: border-box;
+  resize: none;
+}
