--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -2,4 +2,77 @@
 
 /* 回答はここに書いてね */
 
+.q9__trans {
+  position: relative;
+  overflow: hidden;
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  cursor: pointer;
+} 
+
+.q9__trans__thumb {
+  transition: all .5s;
+}
+
+.q9__trans__desc {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, .8));
+  transition: all .5s;
+}
+
+.q9__trans:hover .q9__trans__thumb {
+  transform: scale(1.5);
+}
+
+.q9__trans:hover .q9__trans__desc {
+  bottom: 0;
+}
+
+.q9__trans__desc__text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  color: #fff;
+  box-sizing: border-box;
+  word-break: break-all;
+}
+
 /* 回答はここに書いてね */
+
+.q9_content_animation {
+    height:  100px;                         
+    width:  100px;
+    margin: 0 auto;                          
+    border-radius:  50%;                    
+    background: linear-gradient(-90deg, #00bcd4, #ecf1f2);  
+    animation: anime 1.1s linear infinite;    
+    position: relative;                     
+}
+
+@keyframes anime {
+    0% {
+        transform: rotate(0deg);    
+    }
+    100% {
+        transform: rotate(360deg);  
+    }
+}
+
+.q9_content_animation:before {
+    content: "";      
+    height:  80px;             
+    width:  80px;              
+    display:  block;            
+    background-color:  #fff;    
+    border-radius: 50%;         
+    margin: 0px auto;           
+    position:  relative;        
+    top: 10px;                  
+}
