レビュー修正終わりました

--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -8,9 +8,12 @@
   box-sizing: border-box;
 }
 
+.q1_content:first-child {
+  margin-left: 0;
+}
+
 .q1_content_box {
   float: left;
-  margin-left: 20px;
   padding: 20px;
   width: 230px;
   background: #3274ae;
