--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -8,19 +8,26 @@
   box-sizing: border-box;
   font-size:  18px;
   line-height: 22px;
-
 }
 
-.q2_content_left {
-  padding: 10px 20px;
+.q2__thumb {
+  margin-bottom: 10px;
+}
+
+.q2__thumb.is-left {
+  float: left;
   margin-right: 20px;
-  margin-bottom: 10px;
 }
 
-.q2_content_right {
-  padding: 10px 20px;
-  margin-left: 20px;
-  margin-bottom: 10px;
+.q2__thumb.is-right {
+  float: right;
+  margin-left: 20px 
+}
+
+.q2__text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all; 
 }
 /* 回答はここに書いてね */
 
