--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -47,32 +47,20 @@
 /* 回答はここに書いてね */
 
 .q9_content_animation {
-    height:  100px;                         
-    width:  100px;
-    margin: 0 auto;                          
-    border-radius:  50%;                    
-    background: linear-gradient(-90deg, #00bcd4, #ecf1f2);  
-    animation: anime 1.1s linear infinite;    
-    position: relative;                     
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px solid  #ecf1f2;
+  border-top-color: #00bcd4;
+  border-radius: 50%;
+  animation: loading 1.1s infinite linear;
 }
 
-@keyframes anime {
-    0% {
-        transform: rotate(0deg);    
-    }
-    100% {
-        transform: rotate(360deg);  
-    }
-}
-
-.q9_content_animation:before {
-    content: "";      
-    height:  80px;             
-    width:  80px;              
-    display:  block;            
-    background-color:  #fff;    
-    border-radius: 50%;         
-    margin: 0px auto;           
-    position:  relative;        
-    top: 10px;                  
+@keyframes loading {
+  0%  {
+    transform:  rotate(0);
+  }
+  100% {
+    transform:  rotate(360deg);
+  }
 }
